css/lb-collab.css
.lb-network-node {
    z-index     : 2;
}

.network-node.collab-selected {
    background  : #ffaf4b; /* Old browsers */
    background  : -moz-linear-gradient(top,  #ffaf4b 0%, #ff920a 100%); /* FF3.6+ */
    background  : -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffaf4b), color-stop(100%,#ff920a)); /* Chrome,Safari4+ */
    background  : -webkit-linear-gradient(top,  #ffaf4b 0%,#ff920a 100%); /* Chrome10+,Safari5.1+ */
    background  : -o-linear-gradient(top,  #ffaf4b 0%,#ff920a 100%); /* Opera 11.10+ */
    background  : -ms-linear-gradient(top,  #ffaf4b 0%,#ff920a 100%); /* IE10+ */
    background  : linear-gradient(top,  #ffaf4b 0%,#ff920a 100%); /* W3C */
    filter      : progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffaf4b', endColorstr='#ff920a',GradientType=0 ); /* IE6-9 */
    border      : solid 0.4em #fff;
    -webkit-border-radius: 0.8em;
    -moz-border-radius: 0.8em;
    border-radius: 0.8em;
    cursor      : pointer;
    margin      : -5em 0 0 -8em;
    max-height  : 10em;
    overflow    : hidden;
    padding     : 0.5em 1em;
    position    : absolute;
    width       : 14em;

    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

.collab-selected {
    z-index     : 20;
}

.starting-node {
    height          : 187px;
    margin          : -94px 0 0 -94px;
    position        : absolute;
    width           : 187px;
}

.wheel-background {
    background      : url(../img/wheel.png) 0 0 no-repeat;
    height          : 187px;
    left            : 0;
    position        : absolute;
    top             : 0;
    width           : 187px;
}

#directors-choice {
    background      : #000;
    border          : none;
    height          : 90px;
    left            : 120px;
    position        : absolute;
    top             : 80px;
    opacity         : 0.6;
    width           : 80px;
}

#genre-choice {
    background      : #000;
    border          : none;
    border-top      : 45px solid #000;
    -moz-border-radius-topleft: 300px;
    -moz-border-radius-topright: 300px;
    -moz-border-radius-bottomright: 0px;
    -moz-border-radius-bottomleft: 0px;
    -webkit-border-radius: 100% 100% 0px 0px;
    border-radius: 80px 80px 0px 0px;
    height          : 0px;
    left            : 12px;
    position        : absolute;
    top             : 2px;
    opacity         : 0.1;
    width           : 157px;
}

.selection-box {
    background      : #ED1C24;
    cursor          : default;
    max-height      : 37em;
    margin          : -4em 0 0 -9em;
    min-height      : 10em;
    padding         : 1.5em;
    position        : absolute;
    width           : 18em;
}

.director-box,
.decade-box,
.genre-box {
    background      : #ED1C24;
    -webkit-border-radius: 186px;
    -moz-border-radius: 186px;
    border-radius   : 186px;
    height          : 186px;
    margin          : -93px 0 0 -93px;
    position        : absolute;
    width           : 186px;
}

.decades-box,
.decade-box {
    background      : #8DC63F;
}

.genres-box,
.genre-box {
    background      : #27AAE1;
}

.director-name,
.decade-name,
.genre-name {
    color           : #fff;
    margin-top      : 40%;
    position        : absolute;
    text-align      : center;
    width           : 186px;
}

.node-for-decade>.lb-network-node>.children-nodes>.collab-selected>.network-node {
    border      : #8DC63F 3px solid;
}

.node-for-director>.lb-network-node>.children-nodes>.collab-selected>.network-node {
    border      : #ED1C24 3px solid;
}

.node-for-genre>.lb-network-node>.children-nodes>.collab-selected>.network-node {
    border      : #27AAE1 3px solid;
}

.node-for-decade>.lb-network-node>.children-nodes>.collab-selected>.network-node>.actions>.set-decade,
.node-for-director>.lb-network-node>.children-nodes>.collab-selected>.network-node>.actions>.set-director,
.node-for-genre>.lb-network-node>.children-nodes>.collab-selected>.network-node>.actions>.set-genre {
    display         : none;
}

.network-node .text,
.network-node .actions {
    display  : none;
}

.network-node {
    cursor      : default;
    margin      : -5em 0 0;
    min-width   : 2.5em;
}

.network-node img {
    cursor      : pointer;
    height      : 10em;
    margin      : -5em 0 0 -3em;
    position    : absolute;
}

.collab-selected>.network-node {
    background: -moz-radial-gradient(center, ellipse cover,  rgba(0,0,0,0.65) 0%, rgba(0,0,0,0.65) 89%, rgba(0,0,0,0.65) 100%);
    background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(0,0,0,0.65)), color-stop(89%,rgba(0,0,0,0.65)), color-stop(100%,rgba(0,0,0,0.65)));
    background: -webkit-radial-gradient(center, ellipse cover,  rgba(0,0,0,0.65) 0%,rgba(0,0,0,0.65) 89%,rgba(0,0,0,0.65) 100%);
    background: -o-radial-gradient(center, ellipse cover,  rgba(0,0,0,0.65) 0%,rgba(0,0,0,0.65) 89%,rgba(0,0,0,0.65) 100%);
    background: -ms-radial-gradient(center, ellipse cover,  rgba(0,0,0,0.65) 0%,rgba(0,0,0,0.65) 89%,rgba(0,0,0,0.65) 100%);
    background: radial-gradient(center, ellipse cover,  rgba(0,0,0,0.65) 0%,rgba(0,0,0,0.65) 89%,rgba(0,0,0,0.65) 100%);
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#a6000000',GradientType=1 );
    color       : #fff;
    margin      : -8em -6em 0;
    width       : 40em;
    padding     : 2em;
}

.collab-selected>.network-node>img {
    cursor      : default;
    float       : left;
    height      : 18em;
    margin      : 0 1em 1em 0;
    position    : relative;
}

.collab-selected>.network-node>.text,
.collab-selected>.network-node>.actions {
    display     : block;
    max-height  : 24em;
    overflow    : auto;
}

.lb-node-hover {
    border-color    : #bbb;
    z-index     : 10;
}

.theme {
    background  : rgb(247,251,252); /* Old browsers */
    background  : -moz-linear-gradient(-45deg,  rgba(247,251,252,1) 0%, rgba(217,237,242,1) 40%, rgba(173,217,228,1) 100%); /* FF3.6+ */
    background  : -webkit-gradient(linear, left top, right bottom, color-stop(0%,rgba(247,251,252,1)), color-stop(40%,rgba(217,237,242,1)), color-stop(100%,rgba(173,217,228,1))); /* Chrome,Safari4+ */
    background  : -webkit-linear-gradient(-45deg,  rgba(247,251,252,1) 0%,rgba(217,237,242,1) 40%,rgba(173,217,228,1) 100%); /* Chrome10+,Safari5.1+ */
    background  : -o-linear-gradient(-45deg,  rgba(247,251,252,1) 0%,rgba(217,237,242,1) 40%,rgba(173,217,228,1) 100%); /* Opera 11.10+ */
    background  : -ms-linear-gradient(-45deg,  rgba(247,251,252,1) 0%,rgba(217,237,242,1) 40%,rgba(173,217,228,1) 100%); /* IE10+ */
    background  : linear-gradient(-45deg,  rgba(247,251,252,1) 0%,rgba(217,237,242,1) 40%,rgba(173,217,228,1) 100%); /* W3C */
    filter      : progid:DXImageTransform.Microsoft.gradient( startColorstr='#f7fbfc', endColorstr='#add9e4',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
    margin      : -5em 0 0 -5em;
    width       : 8em;
}

.trailing {
    border-color : #ddd;
}

.starting-node h4,
.network-node h4 {
    color       : #333;
}

/* controls */

.collab-map-zoom-in, .collab-map-zoom-out {
    background  : #369;
    bottom      : 20px;
    color       : #fff;
    cursor      : pointer;
    font-size   : 20px;
    line-height : 16px;
    height      : 20px;
    position    : absolute;
    right       : 20px;
    text-align  : center;
    width       : 20px;
}

.collab-map-zoom-in {
    right       : 50px;
}

/* */
.grab-cursor {
  cursor        : hand;
  cursor        : grab;
  cursor        : -moz-grab;
  cursor        : -webkit-grab;
}

/*
.grab-cursor {
  cursor: url(https://mail.google.com/mail/images/2/openhand.cur), default !important;
}
*/
.grabbing-cursor {
  cursor        : grabbing;
  cursor        : -moz-grabbing;
  cursor        : -webkit-grabbing;
}
/*
.grabbing-cursor {
  cursor: url(https://mail.google.com/mail/images/2/closedhand.cur), default !important;
}
*/

